--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -11,6 +11,7 @@ booking_settings:
     title: Configuració sistema de reserves
     notification_email: Email de notificació
     deposit: \% Dipòsit
+    allow_total_payment: Permetre pagar el total de la reserva
     min_days: Numero mínim de dies
     family: Tipus de producte en lloger
 booking_rates:
@@ -30,6 +31,7 @@ booking_console:
   period: Període
   requested: Solicituds
   confirmed: Confirmades
+  new_booking: Nova reserva
 booking_status:
   pending_confirmation: Pendent
   confirmed: Confirmat
