--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -11,6 +11,7 @@ booking_settings:
     title: Configuración sistema de reservas
     notification_email: Email de notificación
     deposit: \% Depósito
+    allow_total_payment: Permitir pagar el total de la reserva
     min_days: Numero mínimo de días    
     family: Tipo de producto en alquiler
     custom_pickup_return_place: Permitir otros lugares de entrega/recogida
@@ -33,7 +34,8 @@ booking_console:
   planning: Planning    
   period: Período
   requested: Solicitudes
-  confirmed: Confirmadas     
+  confirmed: Confirmadas
+  new_booking: Nueva reserva       
 booking_status:
   pending_confirmation: Pendiente
   confirmed: Confirmado
@@ -87,10 +89,13 @@ new_booking:
   confirm: Solicitar reserva
   confirm_line1: Solicitar
   confirm_line2: Reserva
+  confirm_line1_manager: Guardar
+  confirm_line2_manager: Reserva  
   go_to_pay_line1: Pagar ahora
   go_to_pay_line2: (Confirmar Reserva)
   pay: Pagar
-  not_available: No está disponible en estas fechas
+  not_available: Confirme reserva telefónicamente
+  not_available_manager: No hay disponibilidad
   booking: Seleccionar
   payment_methods: Formas de pago
   checking_availability: Comprobando disponibilidad
@@ -341,6 +346,9 @@ booking:
   payment:
     label: Pago
     description: Puede realizar el pago del importe de la reserva, <strong>%1</strong>
+  deposit_payment:
+    label: Pago depósito 
+    description: Puede realizar el pago del depósito de la reserva, <strong>%1</strong>  
   pending_payment: 
     label: Segundo pago
     description: Puede realizar el pago de la cantidad pendiente, <strong>%1</strong>
