--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -35,7 +35,8 @@ booking_console:
   period: Período
   requested: Solicitudes
   confirmed: Confirmadas
-  new_booking: Nueva reserva       
+  new_booking: Nueva reserva
+  availability: Disponibilidad       
 booking_status:
   pending_confirmation: Pendiente
   confirmed: Confirmado
@@ -246,6 +247,13 @@ booking_management:
     cancel_button:   
       label: Cancelar
       message: ¿Desea cancelar la solicitud reserva?
+    assign_button: 
+      label: Asignar
+      message: ¿Desea asignar el coche?
+    allow_payment_button:
+      label: Permitir pago
+      message: ¿Desea habilitar el pago de esta reserva?
+    force_allow_payment: Pago permitido
     id: Localizador reserva
     creation_date: Fecha reserva
     status: Estado
