--- a/i18n/en.yml
+++ b/i18n/en.yml
@@ -42,6 +42,7 @@ booking_console:
   new_booking: New reservation    
   availability: Availability
   summary: Summary
+  places: Pickup/return
 booking_summary:
   title: Booking summary  
 booking_forecast:
@@ -382,7 +383,35 @@ booking_item_management:
     calendar:
       label: Calendar
     price_definition:
-      label: Prices 
+      label: Prices
+booking_places_definition_management:
+  title: Pickup and return place definition
+  table:
+    id: Id
+    name: Name
+    places: Places management    
+  form:
+    name:
+      label: Name
+    name_required: Name is required
+booking_places_management:
+  title: Pickup and return places
+  table:
+    id: Id
+    name: Name
+    is_pickup: It\'s a pickup place
+    is_return: Is\'s a return place
+    price: Price
+  form:
+    name:
+      label: Name
+    is_pickup:
+      label: It\'s a pickup place
+    is_return: 
+      label: Is\'s a return place
+    price:
+      label: Price                  
+    name_mandatory: Name is required        
 booking:
   days: !!pl
     1: 1 day
