--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -8,9 +8,25 @@ system_admin_menu:
       bookings_scheduler: Agenda
       booking_categories: Categorías
       booking_items: Items en alquiler
+booking_console_configuration:
+  title: Configuración sistema de reservas
+  general_configuration: General
+  payment: Forma de Pago
+  templates: Plantillas      
+booking_configuration_templates:
+  title: Plantillas sistema de reservas
+  contract: Contrato
+  emails: Correos electrónicos
+  customer_emails: Al cliente
+  manager_emails: Al gestor de las reservas
+  email_customer_request_received: Al recibir solucitud
+  email_customer_payment_request_received: Al recibir solucitud (con pago)
+  email_customer_reservation_confirmed: Cuando se confirma la reserva
+  email_manager_request_received: Al recibir solucitud
+  email_manager_payment_request_received: Al iniciar el proceso de cobro
 booking_settings:
   form:
-    title: Configuración sistema de reservas
+    title: Configuración General
     notification_email: Email de notificación
     deposit: \% Depósito
     allow_total_payment: Permitir pagar el total de la reserva
@@ -27,6 +43,21 @@ booking_rates:
   seasons: Temporadas
   how_many_seasons: ¿Cuántas temporadas?
   rates: Precios  
+booking_rates_summary:
+  current_rates:
+    title: Precios actuales
+    base_price: Precio base    
+    category: Categoría
+    prices: Precios
+    factors: Factores
+    season: Temporada
+    price: Precio
+    from: Desde
+    to: Hasta
+    factor: Factor
+    days: !!pl
+      1: 1 día
+      n: \%1 días    
 booking_console:
   title: Reservas
   configuration: Configuración
