--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -12,7 +12,7 @@ booking_settings:
   form:
     title: Configuració sistema de reserves
     notification_email: Email de notificació
-    deposit: % Dipòsit
+    deposit: \% Dipòsit
     allow_total_payment: Permetre pagar el total de la reserva
     min_days: Numero mínim de dies
     family: Tipus de producte en lloger
@@ -229,7 +229,7 @@ booking_places_management:
 booking:
   days: !!pl
     1: 1 dia
-    n: %1 dies
+    n: \%1 dies
   title: Reserva %1
   expired: Excedit el temps per fer diposit/pagament
   id: El seu identificador de reserva és <strong>%1</strong>. <span class="less_contrast_text smaller_text">Si us plau utilitzi el seu identificador de reserva en totes les comunicacions.</span>
