pagination + assign different category resource

--- a/i18n/ca.yml
+++ b/i18n/ca.yml
@@ -286,4 +286,6 @@ not_assigned_bookings:
     customer: Client
     status: Estat  
   form:  
-    assign: Assignar    
+    assign: Assignar
+    reassign: Reassignar
+    all_resources: Mostrar tots els recursos    
