--- a/i18n/es.yml
+++ b/i18n/es.yml
@@ -6,7 +6,7 @@ system_admin_menu:
       title: Gestión de reservas
       bookings: Reservas
       bookings_scheduler: Agenda
-      booking_categories: Categorías
+      booking_categories: Productos
       booking_items: Recursos
 booking_console_configuration:
   title: Configuración sistema de reservas
@@ -42,7 +42,7 @@ booking_settings:
     reservation_starts_with:
       title: La reserva empieza seleccionando
       dates: Las fechas
-      categories: Las categorías
+      categories: Los productos
     deposit: \% Depósito
     allow_total_payment: Permitir pagar el total de la reserva
     min_days: Numero mínimo de días    
@@ -77,12 +77,12 @@ booking_rates_summary:
 booking_console:
   title: Reservas
   configuration: Configuración
-  categories: Categorías
+  categories: Productos
   extras: Extras
   items: Recursos
   rates: Tarifas
   reservations: Reservas
-  planning: Planning    
+  planning: Planning de recursos   
   period: Período
   requested: Solicitudes
   confirmed: Confirmadas
@@ -421,11 +421,11 @@ booking_management:
     flight_time: Hora de llegada
 booking_category_management:
   table:
-    calendar: Gestión del calendario
-    prices: Gestión de precios  
+    calendar: Calendario
+    prices: Precios  
     scheduler: Agenda
   form:
-    title: Categorías
+    title: Productos
     code:
       label: Código
     name:
@@ -442,7 +442,7 @@ booking_extra_management:
   table:
     code: Código
     name: Nombre
-    prices: Gestión de precios      
+    prices: Precios      
   form:
     code:
       label: Código
@@ -473,17 +473,17 @@ booking_item_management:
     price_definition:
       label: Precio
 booking_places_definition_management:
-  title: Lugares de entrega y recogida
+  title: Entrega y recogida
   table:
     id: Id
     name: Nombre
-    places: Lugares de entrega y recogida    
+    places: Lugares    
   form:
     name:
       label: Nombre
     name_required: Nombre obligatorio
 booking_places_management:
-  title: Lugares de entrega y recogida
+  title: Lugares
   table:
     id: Id
     name: Nombre
@@ -544,7 +544,7 @@ booking:
     done: Finalizada
     cancelled: Cancelada
 bookings_planning:
-  title: Planning 
+  title: Planning de recursos 
 not_assigned_bookings:
   title: Reservas no asignadas
   table:
